# 2adif

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  publish.yml
src/: cli.py  db.py  fields.py  info.py  main.py  time_helper.py
test/: cli.test.sh  test.adi  test1.csv
